fix: ThreadedBackground positioning - absolute instead of fixed, z-index 0

--- a/src/components/ThreadedBackground.css
+++ b/src/components/ThreadedBackground.css
@@ -11,13 +11,12 @@
 }
 
 .threaded-background {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
-  background: black;
+  z-index: 0;
   overflow: hidden;
 }
 
